--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#social">Social Media</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#activities">Activies & Leadership</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#social">Social Media</a>
-        </li>
+
       </ul>
     </div>
   </nav>
@@ -71,7 +72,7 @@
           <a href="mailto:laurenkeena@gmail.com">laurenkeena@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in marketing, communications, and social media interactions that provide high quality understandings of customer merchandising trends and practices.</p>
-	<div class="subheading mb-5"><a href="docs/Lauren_Keena_Digital_Resume_2019.pdf">Print Resume</a></div>
+	
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/lauren-keena-25a2a7b2/" title="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
@@ -206,6 +207,27 @@ domestic and international freight quotes. Arranged shipments with domestic and 
 
     <hr class="m-0">
 
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="social">
+      <div class="w-100">
+        <h2 class="mb-5">Social Media</h2>
+
+        <div class="subheading mb-3">Brands that have utilized content from personal Instagram account for their posts and/or stories include:</div>
+
+        <ul class="fa-ul mb-0 text-primary">
+          <li><i class="fab fa-instagram"></i>	@townandcountrymag</li>
+          <li><i class="fab fa-instagram"></i>	@wellesleycollege</li>
+          <li><i class="fab fa-instagram"></i>	@hillflint</li>
+          <li><i class="fab fa-instagram"></i>	@shopkirbygirl</li>
+          <li><i class="fab fa-instagram"></i>	@coastalconnecticut</li>
+          <li><i class="fab fa-instagram"></i>	@bertram_yachts</li>
+          <li><i class="fab fa-instagram"></i>	@darienboatclub - Increased followers by 400%, increased engagement by 300%.</li>
+          <li><i class="fab fa-instagram"></i>	@goodnightstay</li>
+        </ul>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
@@ -274,27 +296,6 @@ Marine Police Department.</p>
           </div>
         </div>
 
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="social">
-      <div class="w-100">
-        <h2 class="mb-5">Social Media</h2>
-
-        <div class="subheading mb-3">Brands that have utilized content from personal Instagram account for their posts and/or stories include:</div>
-
-        <ul class="fa-ul mb-0">
-          <li><i class="fab fa-instagram"></i>	@townandcountrymag</li>
-          <li><i class="fab fa-instagram"></i>	@wellesleycollege</li>
-          <li><i class="fab fa-instagram"></i>	@hillflint</li>
-          <li><i class="fab fa-instagram"></i>	@shopkirbygirl</li>
-          <li><i class="fab fa-instagram"></i>	@coastalconnecticut</li>
-          <li><i class="fab fa-instagram"></i>	@bertram_yachts</li>
-          <li><i class="fab fa-instagram"></i>	@darienboatclub</li>
-          <li><i class="fab fa-instagram"></i>	@goodnightstay</li>
-        </ul>
       </div>
     </section>
 
