--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
           <span class="text-primary">Keena</span>
         </h1>
         <div class="subheading mb-5">Darien, CT 06820 · 
-	  <a href="tel:(203)-984-5944">(203)-984-5944</a> ·
-          <a href="mailto:laurenkeena@gmail.com">laurenkeena@gmail.com</a>
+	        <a href="tel:(203)-984-5944">(203)-984-5944</a> ·
+          <a href="mailto:laurenkeena@gmail.com">laurenkeena@gmail.com</a><br>
+          <a href="https://www.instagram.com/laurenkeena/">@laurenkeena</a>
         </div>
         <p class="lead mb-5">I am experienced in marketing, communications, and social media interactions that provide high quality understandings of customer merchandising trends and practices.</p>
-	
+
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/lauren-keena-25a2a7b2/" title="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
@@ -220,9 +221,13 @@ domestic and international freight quotes. Arranged shipments with domestic and 
           <li><i class="fab fa-instagram"></i>	@shopkirbygirl</li>
           <li><i class="fab fa-instagram"></i>	@coastalconnecticut</li>
           <li><i class="fab fa-instagram"></i>	@bertram_yachts</li>
-          <li><i class="fab fa-instagram"></i>	@darienboatclub - Increased followers by 400%, increased engagement by 300%.</li>
+          <li><i class="fab fa-instagram"></i>	@darienboatclub</li>
           <li><i class="fab fa-instagram"></i>	@goodnightstay</li>
         </ul>
+        <br>
+        <div class="subheading mb-3">@darienboatclub - Increased followers by 400%, increased engagement by 300%.</div>
+
+
       </div>
     </section>
 
