--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ domestic and international freight quotes. Arranged shipments with domestic and 
           <li><i class="fab fa-instagram"></i>	@goodnightstay</li>
         </ul>
         <br>
-        <div class="subheading mb-3">@darienboatclub - Increased followers by 400%, increased engagement by 300%.</div>
+        <div class="subheading mb-3"><a href="https://www.instagram.com/darienboatclub/">@darienboatclub</a> - Increased followers by 400%, increased engagement by 300%.</div>
 
 
       </div>
@@ -238,10 +238,13 @@ domestic and international freight quotes. Arranged shipments with domestic and 
         <h2 class="mb-5">Skills</h2>
 
         <ul class="fa-ul mb-0">
-          <li><i class="fa-li fa fa-check"></i>Highly Organized</li>
+          <li><i class="fa-li fa fa-check"></i>Highly Organized.</li>
           <li><i class="fa-li fa fa-check"></i>Strong interpersonal and communication skills.</li>
           <li><i class="fa-li fa fa-check"></i>Advanced understanding of Microsoft Office Suite.</li>
           <li><i class="fa-li fa fa-check"></i>Advanced understanding of social media platforms and social media marketing strategies.</li>
+          <li><i class="fa-li fa fa-check"></i>Strong teamwork ability.</li>
+          <li><i class="fa-li fa fa-check"></i>Excellent customer service, and community outreach ability.</li>
+          <li><i class="fa-li fa fa-check"></i>Cutting edge knowledge of Marketing Research and Market Trend Data Analysis.</li>
         </ul>
       </div>
     </section>
